fixes 2 Дополнен мэйн выводом результата.